# ProjetoPilhas

./: CMakeLists.txt  README.md  funcoes.c  funcoes.h  main.c  pilha_numeros.c  pilha_numeros.h  pilha_operadores.c  pilha_operadores.h
